descrizione dei parametri e delle funzioni store e update nelle info
